# DataSynthSecure

./: .audit_secret  .gitattributes  .gitignore  .replit  README.md  ai_scorer.py  app.py  audit_trail.db  audit_trail.py  bias_dashboard.py  bias_detection.py  data_generator.py  database.py  executive_report.md  monitoring_dashboard.py  opportunity_scores.csv  pyproject.toml  replit.md  report_generator.py  requirements.txt  synthetic_opportunities.csv  test_core_functionality.py  utils.py  visualizations.py
.streamlit/: config.toml
attached_assets/: Pasted-1-Ce-face-scriptul-ncearc-mai-nt-i-s-foloseasc-GPT-4-turbo-pentru-demo-final-Dac-nu-e-di-1758065525833_1758065525836.txt  Pasted-Prompt-1-STEP-1-Secure-Synthetic-Data-Creation-Objective-Create-a-realistic-safe-and-security-1758033492816_1758033492817.txt
