[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faker>=37.8.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openai>=1.107.3",
    "pandas>=2.3.2",
    "plotly>=5.20,<6",
    "seaborn>=0.13.2",
    "streamlit>=1.49.1",
]
